[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/Medi.gd" type="Script" id=1]
[ext_resource path="res://art/medipixel1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.0561, 50.264 )

[node name="Medi" type="KinematicBody2D"]
position = Vector2( -1.55612, 8.26403 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, -16 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -8.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="RightWallRaycast1" type="RayCast2D" parent="."]
position = Vector2( -1.5, 21.5 )
enabled = true
cast_to = Vector2( 17, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="RightWallRaycast2" type="RayCast2D" parent="."]
position = Vector2( -1.5, -51 )
enabled = true
cast_to = Vector2( 17, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftWallRaycast1" type="RayCast2D" parent="."]
position = Vector2( -2.5, 21 )
enabled = true
cast_to = Vector2( -17, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftWallRaycast2" type="RayCast2D" parent="."]
position = Vector2( -3.5, -50.5 )
enabled = true
cast_to = Vector2( -17, 0 )
__meta__ = {
"_edit_group_": true
}
